Bug 910897 - Use MP3FrameParser in DirectShow in order to calculate the duration. r=padenot